Make RubyVM::InstructionSequence.compile_file use same encoding as load

This switches the internal function from rb_parser_compile_file_path
to rb_parser_load_file, which is the same internal method that
Kernel#load uses.

Fixes [Bug #17308]